--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	{% block title%}
-	<title> Swimming pool Service Company </title>
+	<title> IT Bangla Limited </title>
 	{% endblock title%}
 	
 	<!-- custom-theme -->
@@ -59,17 +59,19 @@
     <link rel="stylesheet" href="static/assets/css/main.css" type="text/css">
     <!-- Responsive CSS Styles -->
     <link rel="stylesheet" href="static/assets/css/responsive.css" type="text/css">
-
+	
+<link rel="stylesheet" href="static/css/marquee_styles.css" >
     <!-- Color CSS Styles  -->
     <link rel="stylesheet" type="text/css" href="static/assets/css/colors/red.css" media="screen" />
-    
+   <script src="static/js/marquee_js.js" defer></script>
 </head>
 
   <body>
-  
+    
   <div class="banner_top" id="home">
-		<div data-vide-bg="static/images/ban2.jpg">
-			<div class="center-container">
+		 <!--<div data-vide-bg="static/images/ban2.jpg">
+		 <div src="static/images/ban2.jpg">  -->
+			<!--<div class="center-container"> -->
 				<!-- top_header_agile_info_w3ls -->
 				<div class="top_header_agile_info_w3ls">  
 					<nav class="navbar navbar-default">
@@ -80,7 +82,7 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-							<h1><a class="navbar-brand" href=""><span>ITB</span>IT Bangla</a></h1>
+							<h1><a class="navbar-brand" href="/"><span>ITB</span>IT Bangla</a></h1>
 						</div>
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -167,11 +169,37 @@
 					</nav>
 				</div>
 			 
-</div>
-		</div>
-	</div>
 
+	
+	</div>
+   
+    <div class="marquee">
+    <ul class="marquee-content">
+      <li><img src= "static/images/1.jpg"></li>
+       <li><img src= "static/images/2.jpg"></li>
+        <li><img src= "static/images/3.jpg"></li>
+         <li><img src= "static/images/4.jpg"></li>
+          <li><img src= "static/images/5.jpg"></li>
+           <li><img src= "static/images/6.jpg"></li>
+            <li><img src= "static/images/7.jpg"></li>
+             <li><img src= "static/images/8.jpg"></li>
+
+    </ul>
+  </div>
+    
+    <ul class="marquee-content">
+     
+	  <li style="font-weight: bold; font-size: 25px;">IT bangla</li>
+	  <li style="font-weight: bold; font-size: 25px;">where you can build your future</li>  
+	 <li ></li>  
+	  <li style="font-weight: bold; font-size: 25px;">where you can build your future</li>  
+	  <li ></li>  
+	   <li style="font-weight: bold; font-size: 25px;">where you can build your future</li>  
+    </ul>
+  
+  
       <section id="blog" class="section">
+	
       <!-- Container Starts -->
      <!-- <div class="container"> -->
             <div class="blog-item-wrapper"> 
@@ -183,6 +211,7 @@
         </div>
            
          </div>
+	
     </section>
 
 
@@ -351,8 +380,12 @@
 -->
 
  <!-- //footer -->
-	<!-- js -->
+ 	
+	<!-- js 
 	<script type="text/javascript" src="static/js/jquery-2.1.4.min.js"></script>
+	 -->
+	 <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 	<!-- //js -->
 	<script src="static/js/jquery.vide.min.js"></script>
 	<script src="static/js/responsiveslides.min.js"></script>
