--- a/smpool_app/templates/chatpop.html
+++ b/smpool_app/templates/chatpop.html
@@ -2,68 +2,59 @@
 <html lang="en">
   <head>
 	{% extends 'base.html' %}
-
-
-
-
     {%block title%}
         <title> chat us </title>
     {%endblock title%}
 
-  <script>
-	$('#chatModal').on('show.bs.modal', function (event) {
-    var button = $(event.relatedTarget) // Button that triggered the modal
-    var recipient = button.data('whatever') // Extract info from data-* attributes
-  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-    var modal = $(this)
-    modal.find('.modal-title').text('New message to ' + recipient)
-    modal.find('.modal-body input').val(recipient)
-    });
-	</script>
-
-
 </head>
 <body>
  {%block content%}
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#chatModal" data-whatever="@mdo">chat</button>
+<button type="button" id= "myBtn" class="btn btn-primary" data-toggle="modal" data-target="#chatModal" data-whatever="@mdo">chat</button>
 
-   <div class="modal fade" id="chatModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal fade" id="chatModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="chatModalLabel">New message</h5>
+        <h5 class="modal-title" id="exampleModalLabel">It Bnagla Ltd</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Enter your Name:</label>
-            <input type="text" class="form-control" id="recipient-name">
-          </div>
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Enter your email ID</label>
-            <input type="text" class="form-control" id="recipient-name">
-          </div>
-          
-          <div class="form-group">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
-          </div>
+  <h5>Popover in a modal</h5>
+  <p>This <a href="#" role="button" class="btn btn-secondary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">button</a> triggers a popover on click.</p>
+  <hr>
+  <h5>Tooltips in a modal</h5>
+  <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
+</div>
 
-        </form>
-      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
 
+
+
+ <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <script>
+
+
+document.getElementById("myBtn").style.visibility = "hidden";
+
+$(document).ready(function()
+{
+    var refreshId = setInterval( function() 
+    {
+       
+        $('#myBtn').click();
+    }, 10000);
+});
+
+	</script>
  {%endblock content%}
 </body>
-
 </html>
