--- a/smpool_app/templates/index.html
+++ b/smpool_app/templates/index.html
@@ -705,7 +705,7 @@
 	<!-- //for bootstrap working -->
 
 
-	 <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!--  <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
   <script>
 document.getElementById("myBtn").style.visibility = "hidden";
